# Nanocode_OG1

./: .env.example  .gitignore  CLEANUP_REPORT.txt  CLEANUP_VERIFICATION_REPORT.txt  DEV_NOTES.md  NOTICE  Nanocode_notice.txt  README.md  SECURITY_HARDENING.md  SECURITY_QUICK_REFERENCE.md  TEST_RESULTS.md  TEST_SUMMARY_COMPREHENSIVE.md  WHITEPAPER.md  WORK_COMPLETION_SUMMARY.md  configure_nanocode.sh  dev.sh  pyproject.toml  requirements.txt
.github/workflows/: frontend-ci.yml
_redundant_variants/nanocode-local-main-deltas/: README.md  WHITEPAPER.md
_redundant_variants/nanocode-local-main-deltas/app/: config.py  dependencies.py  main.py  model_client.py
app/: __init__.py  config.py  dependencies.py  health.py  logging_config.py  main.py  model_client.py
app/routers/: admin_router.py  nanocode_router.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/api/: nanocodeClient.ts  (+1 more)
model_server/: README_OPENAI.md  config.py  server.py  tokenizer.py
model_server/backend/: __init__.py  llama_cpp_backend.py  mock_backend.py  vllm_backend.py
nanocode/: __init__.py  constants.py  core.py  health.py  prompts.py  schema.py  utils.py  validation.py
nanocode/embeddings/: __init__.py  retrieval.py  service.py  store.py
nanocode/examples/: nanocode_prompts.md  sample_flows.md
scripts/: run_dev_api.sh  run_dev_model.sh  test_openai_model.sh
tests/: test_app_nanocode.py  test_model_client.py  test_nanocode_core.py  test_nanocode_health.py
training/: __init__.py
(+8 files in other folders)
