[project]
name = "nanocode-local"
version = "0.1.0"
description = "Local Nanocode API and model server"
authors = [{name = "Nanocode Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Avoid tmpfile failures on Windows/WSL mounts by using sys-level capture.
addopts = "--capture=sys"
